examples/test/testpolicy6626.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6626
  namespace: namespace382
spec:
  podSelector:
    matchLabels:
      key49: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value39
          key14: value27
      podSelector:
        matchLabels:
          key7: value37
          key38: value34
